<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Welcome_Activity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/welcome_bg"
      android:orientation="vertical"
      app:layout_constraintTop_toTopOf="parent"
      tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/button1"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="0dp"
        android:text="B.C."
        app:backgroundTint="#009688" />

    <Button
        android:id="@+id/button5"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:text="Manitoba"
        app:backgroundTint="#FF9800" />

    <Button
        android:id="@+id/button6"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:text="Alberta"
        app:backgroundTint="#2196F3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:text="Ontario"
        app:backgroundTint="#E91E63" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>