<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pricetracker.Presentation.PurchaseItem">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="187dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="186dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:text="Title"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/sampleImg"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="15dp"
                 />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="187dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"

                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/info_bg"
                    android:text="TextView"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/stock"
                    android:layout_width="89dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/info_bg"
                    android:text="stock" />

                <TextView
                    android:id="@+id/store"
                    android:layout_width="89dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/info_bg"
                    android:text="store" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/info_bg"
                android:text="SAMPLE Review" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"

                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/info_bg"
                android:text="TextView" />
        </LinearLayout>
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:id="@+id/graph" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:layout_marginBottom="45dp"
        android:text="Add to Cart"
        app:backgroundTint="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butButton"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:text="Buy Direct!"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
